Fixed last part of rumfang not visible

--- a/Lejrbog App/www/css/omregner.css
+++ b/Lejrbog App/www/css/omregner.css
@@ -35,3 +35,6 @@ hr {
 	border-style: solid;
 	border-color: #AB774F;
 }
+#marginfill{
+	margin-bottom: 1em;
+}
